# library-management-system

./: .env.example  .gitignore  Dockerfile  Makefile  docker-compose.yml  entrypoint.sh  pyproject.toml
api/: __main__.py  main.py
api/config/: __init__.py  api.py
api/core/: paginations.py  tortoise_config.py
api/core/auth/: models.py  service.py  views.py
api/core/books/: models.py  views.py
api/core/borrowed/: views.py
api/core/students/: models.py  views.py
api/utils/: __init__.py  responses.py
migrations/main/: 0_20220420185402_init.sql
