[tool.poetry]
name = "library-management-backend"
version = "0.1.0"
description = "A backend application for a library management system"
authors = ["Nishant Sapkota <snishant306@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["uvicorn"], version = "^0.75.2"}
fastapi-utils = "^0.2.1"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
pydantic = {extras = ["email"], version = "^1.9.0"}
tortoise-orm = {extras = ["asyncpg"], version = "^0.19.0"}
aerich = "^0.6.3"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"


[tool.aerich]
tortoise_orm = "api.core.tortoise_config.tortoise_config"
location = "./migrations"
src_folder = "./."
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
